--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@truffle/hdwallet-provider": "^1.7.0",
+    "bootstrap": "^5.2.3",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
+    "ipfs-http-client": "^54.0.2",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fps-stats": "^0.3.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "typescript": "^3.9.2",
     "use-dark-mode": "^2.3.1",
     "vanta": "^0.5.24",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
